<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2012 Square, Inc. -->

<resources>
    <string name="app_name">MedZone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tablets">Tablets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_tablets">add Tablets</string>
    <string name="drug_name">Drug name</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="night">Night</string>
    <string name="With_food">With food</string>
    <string name="with_food">With food</string>
    <string name="tablist">Tablet List</string>
    <string name="tablet_name">Tablet name</string>
    <string name="mg">Units</string>
    <string name="food_preferences">Food perefences</string>
    <string name="add">Add</string>
    <string name="tabletimage">tabletImage</string>
    <string name="before_food">Before food</string>
    <string name="addimage">AddImage</string>
    <string name="after_food">After food</string>
    <string name="phno">Ph no</string>
    <string name="name">Name</string>
    <string name="next">next</string>
    <string name="illness">Illness</string>
    <string name="patient_no">Patient No</string>
    <string name="care_taker_number">Care Taker Number</string>
    <string name="save">Save</string>
    <string name="snooze_timer">Snooze Timer</string>
    <string name="send_sms_to_caretaker">Send SMS to Caretaker</string>
    <string name="snooze_time_in_minutes">Snooze Time in Minutes</string>
    <string name="your_reminder_to_take_tablets">Your reminder to take tablets</string>
    <string name="quantity">Available pills</string>
    <string name="available_no">Available</string>
    <string name="up_coming">Up Coming</string>
    <string name="snoozed_amp_skipped"><![CDATA[Snoozed & Skipped]]></string>
    <string name="take">Take</string>
    <string name="snooze">Snooze</string>
    <string name="skip">Skip</string>
    <string name="close">Close</string>
    <string name="prescription">Prescription</string>
    <string name="tablet">Tablets</string>
    <string name="investigation">Reports</string>
    <string name="evening">Evening</string>
    <string name="instruction">Instruction</string>
    <string name="select_investigation_type">Select Investigation Type</string>
    <string name="investigation_type">Investigation Type</string>
    <string name="Continue">continue</string>
    <string name="add_reading">Add reading</string>
    <string name="value">value</string>
    <string name="value_name">value name</string>


    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="schedule">schedule</string>
    <string name="done">Done</string>
    <string name="add_event">Add event</string>
    <string name="select_dosage_start_date">Select Dosage start date.</string>
    <string name="add_amp_schedule"><![CDATA[Add & Schedule]]></string>
    <string name="unit">Unit</string>
    <string name="tapto">tap to take u your tablets</string>
    <string name="takeTalets">Take your tablets for the Day</string>
    <string name="tablets_for_the_day">Tablets for the day</string>
    <string name="english">English</string>
    <string name="event_detail">Event Detail</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="title_activity_detail_admin">DetailAdminActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tamil">Tamil</string>
    <string name="hindi">Hindi</string>
    <string name="select_date">Select Date</string>
    <string name="summary">Summary</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>


</resources>
