<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_medzone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/tv_medzone_size"
        android:padding="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_phNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_medzone"
        android:hint="@string/phno"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="40dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/phNoET"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_phNo"
        android:hint="@string/name"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/nameEt"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/illness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patientNo"
        android:hint="@string/illness"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:id="@+id/illnessEt"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patientNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_name"
        android:hint="@string/patient_no"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/patientNoEt"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/illness"
        android:text="@string/next"
        android:textSize="20sp"
        android:id="@+id/nextBtn"
        android:drawableEnd="@drawable/ic_baseline_navigate_next_24"/>



</RelativeLayout>