<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/investigationType"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/select_investigation_type"/>

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/investigationType"
        android:layout_margin="20dp"
        android:hint="@string/investigation_type"
        android:id="@+id/investTi"
        android:orientation="horizontal"
        >



        <AutoCompleteTextView
            android:id="@+id/investigationDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/investTi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/proceedBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/Continue"/>

</RelativeLayout>