<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.EventEntryFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventTi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_detail"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="40dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventTi"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:padding="20dp"
        android:text="@string/select_date"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="18dp"
        android:id="@+id/doneBtn"
        android:text="@string/done" />




</RelativeLayout>