<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    tools:context=".ui.AddInvestigation">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_margin="8dp"
        tools:text="@string/hello_blank_fragment" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:enabled="true"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/proceedBtn"
        android:text="@string/Continue"
        android:focusable="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler"
        tools:listitem="@layout/reading_item"
        tools:itemCount="2"
        android:layout_below="@id/header"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Addlabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/add_reading"
        android:layout_marginBottom="60dp"
        android:background="@color/md_blue_A700"
        android:layout_marginEnd="20dp"/>


</RelativeLayout>