<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/care_takerNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/care_taker_number"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">



        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/care_takerNoEt"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/caretakerSMS"
        android:text="@string/send_sms_to_caretaker"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/care_takerNo"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/breakfastTime"
        android:layout_below="@id/caretakerSMS"
        tools:text="09.00 AM"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:layout_toEndOf="@id/breakfastEdit"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/breakfastEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/caretakerSMS"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_baseline_edit_24" />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/lunchTime"
        android:layout_below="@id/breakfastTime"
        tools:text="09.00 AM"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/lunchEdit"
        android:layout_marginTop="20dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_alignParentStart="true"
        android:src="@drawable/ic_baseline_edit_24"
        android:layout_below="@id/breakfastTime"
        android:layout_marginStart="20dp"
        android:id="@+id/lunchEdit"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/eveningTime"
        android:layout_toEndOf="@id/lunchEdit"
        android:layout_below="@id/lunchTime"
        tools:text="09.00 AM"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/dinerTime"
        android:layout_below="@id/eveningTime"
        tools:text="09.00 AM"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:layout_toEndOf="@id/eveningEdit"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_baseline_edit_24"
        android:layout_below="@id/lunchTime"
        android:layout_marginStart="20dp"
        android:id="@+id/eveningEdit"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_baseline_edit_24"
        android:layout_below="@id/eveningTime"
        android:layout_marginStart="20dp"
        android:id="@+id/dinnerEdit"
        android:layout_marginTop="20dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/SaveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/snoozeLabel"
        android:text="@string/snooze_timer"
        android:layout_below="@id/dinerTime"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_marginStart="30dp"/>
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_baseline_edit_24"
    android:layout_below="@id/dinerTime"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:id="@+id/snoozeEdit"
        android:layout_toEndOf="@id/snoozeLabel" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/snoozeEdit"
        android:layout_margin="20dp"
        android:weightSum="3"
        android:orientation="horizontal"
        android:id="@+id/langGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:layout_weight="1"
            android:checked="true"
            android:id="@+id/eng"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tamil"
            android:layout_weight="1"
            android:id="@+id/tamil"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hindi"
            android:layout_weight="1"
            android:id="@+id/hindi"/>
    </RadioGroup>


</RelativeLayout>