<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:weightSum="3"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_readingLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value_name"
        android:padding="10dp"
        android:layout_weight="1"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/readlingLabelET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_readingValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value"
        android:padding="10dp"
        android:layout_weight="1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/readlingValueET"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unit"
        android:padding="10dp"
        android:layout_weight="1"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">


    <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="18dp"
            android:id="@+id/readUnitET"
            />

    </com.google.android.material.textfield.TextInputLayout>




</LinearLayout>